@@ -497,3 +497,6 @@ Dungeon Changes
 General changes
 	Red dragon scale based armor now grants flying.
 	Upgrade kits now work on tools.
+	Artifacts' birthplace is now tracked.
+		When an artiwish fails for an arti that already exists, you will be told where it was born.
+		The Oracle can now be consulted for a list of generated artifacts, and you can query an artifact's birthplace.
